[package]
name = "atsamc-hal"
version = "0.7.4"
authors = ["Wez Furlong <wez@wezfurlong.org>", "Paul Sajna <sajattack@gmail.com>","Arran Short <arrancshort@gmail.com>"]
description = "HAL and Peripheral access API for ATSAMC21 microcontrollers"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sordfish/atsamc"
readme = "README.md"
documentation = "https://sordfish.github.io/atsamc/atsamc21n18a/atsamc21_hal/"
edition = "2018"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"
paste = "~0.1"
bitfield = "~0.13"
vcell = "~0.1"
rand_core = "~0.5"

[dependencies.jlink_rtt]
optional = true
version = "~0.1"

[dependencies.void]
default-features = false
version = "~1.0"

# Each of the supported chips is listed as an optional dependency here.
# This makes it available when the corresponding feature name is referenced.
# We use a feature named "samdFOO" to pull in the dependency named "atsamdFOO"
[dependencies.atsamc21n18a]
path = "../pac/atsamc21n18a"
version = "~0.6"
optional = true

[dependencies.usb-device]
version = "~0.2"
optional = true

[dev-dependencies]
panic_rtt = "~0.1"
panic-abort = "~0.3"
panic-semihosting = "~0.5"
cortex-m-semihosting = "~0.2"
cortex-m-rtfm = "~0.3"

[features]
# This section lists our feature name to dependency mapping.  This are separated
# out so that the board support crates can reference a single feature name to
# select the appropriate chip, and to keep that separate from the dependency name
# for the `rt` feature below, which has to list out all possible optional deps.
# If we simply used feature names that matched the dependency names, enabling the
# rt feature would link all possible parts in and cause a linker error due to
# the high degree of similar symbols present in the various parts.
samc21n18a = ["atsamc21n18a"]
samc21n18a-rt = ["atsamc21n18a", "atsamc21n18a/rt"]
unproven = ["embedded-hal/unproven"]
use_rtt = ["jlink_rtt"]
use_uart_debug = []
usb = ["usb-device"]
