[package]
name = "samc21n_xplained_pro"
version = "0.5.1"
authors = ["Wez Furlong <wez@wezfurlong.org>","Arran Short <arrancshort@gmail.com>"]
description = "Board Support crate for the SAMC21N Xplained Pro Evaluation Kit"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sordfish/atsamc"
readme = "README.md"
documentation = "https://sordfish.github.io/atsamc/atsamc21n18a/samc21n_xplained_pro/"
edition = "2018"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2"
nb = "~0.1"

[dependencies.cortex-m-rt]
version = "~0.6"
optional = true

[dependencies.atsamc-hal]
path = "../../hal"
version = "~0.7"
default-features = false

[dev-dependencies]
panic-halt = "~0.2"
panic_rtt = "~0.2"
panic-semihosting = "~0.5"
cortex-m-semihosting = "~0.3"
cortex-m-rtfm = "~0.4"
sx1509 = "~0.2"

[features]
# ask the HAL to enable atsamc21n18a support
default = ["rt", "atsamc-hal/samc21n18a"]
rt = ["cortex-m-rt", "atsamc-hal/samc21n18a-rt"]
unproven = ["atsamc-hal/unproven"]
use_rtt = ["atsamc-hal/use_rtt"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
