[package]
name = "atsamc21n18a"
description = "Peripheral access API for ATSAMC21N18A microcontrollers (generated using svd2rust)"
version = "0.6.0"
authors = ["Wez Furlong <wez@wezfurlong.org>", "Blake Johnson <johnsonblake1@gmail.com>", "Arran Short <arrancshort@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sordfish/atsamc"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/atsamd21g18a/"

[dependencies]
bare-metal = "~0.2"
cortex-m = "~0.6"
vcell = "~0.1"

[dependencies.cortex-m-rt]
optional = true
version = "~0.6"

[features]
rt = ["cortex-m-rt/device"]